[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyElectra"
version = "1.0.5"
description = "Electra Smart Python Integration."
readme = "README.md"
authors = [{ name = "Jafar Atili", email = "at.jafar@outlook.com" }]
keywords = [ "home", "automation", "Electra", "smart", "Electra Smart", "Air Condition"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = ["asyncio", "aiohttp"]
requires-python = ">=3.9"


  
[project.urls]
homepage = "https://pypi.org/project/pyelectra/"
repository = "https://github.com/jafar-atili/pyelectra/"